--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,12 +23,21 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".GameActivity"
+        android:name=".GameActivity"
+        android:label="@string/app_name"
+        android:screenOrientation="portrait">
+        <intent-filter>
+            <action android:name="com.ibmadness.devteam.scissors.DT" />
+            <category android:name="android.intent.category.DEFAULT" />
+        </intent-filter>
+    </activity>
+        <activity
+            android:name=".WatchingGameActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait">
             <intent-filter>
-            <action android:name="com.ibmadness.devteam.scissors.DT" />
-            <category android:name="android.intent.category.DEFAULT" />
+                <action android:name="com.ibmadness.devteam.scissors.WG" />
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
     </application>
